# KL730HRNet

./: README.md
kneopi-examples-main/: LICENSE
kneopi-examples-main/ai_application/nnm/: build_all.sh
kneopi-examples-main/ai_application/nnm/app_flow/: demo_customize_inf_multiple_models.c  demo_customize_inf_single_model.c  demo_customize_inf_single_model_with_sw_npu_format_convert.c
kneopi-examples-main/ai_application/nnm/app_flow/include/: demo_customize_inf_multiple_models.h  demo_customize_inf_single_model.h  demo_customize_inf_single_model_with_sw_npu_format_convert.h  kdp2_inf_app_yolo.h
kneopi-examples-main/ai_application/nnm/app_flow/pre_post_proc/: user_post_mem_manager.c  user_post_process_classifier.c  user_post_process_yolov5.c  user_pre_process_yolov5.c  user_pre_process_yolov5_with_sw_npu_format_convert.c  user_utils.c
kneopi-examples-main/ai_application/nnm/app_flow/pre_post_proc/include/: user_post_mem_manager.h  user_post_process_classifier.h  user_post_process_yolov5.h  user_pre_process_yolov5.h  user_pre_process_yolov5_with_sw_npu_format_convert.h  user_utils.h
kneopi-examples-main/ai_application/nnm/common/: base.h  io.h  ipc.h  kdpio.h  kp_struct.h  model_parser_api_kne.h  model_type.h  ncpu_gen_struct.h
kneopi-examples-main/ai_application/nnm/example_nnm_image/: CMakeLists.txt  application_init.c  display_log.c  inference_nnm.c  input_image.c  main.c
kneopi-examples-main/ai_application/nnm/example_nnm_image/include/: application_init.h  example_shared_struct.h
kneopi-examples-main/ai_application/nnm/example_nnm_rtsp/: CMakeLists.txt  application_init.cpp  input_rtsp.cpp  main.cpp
kneopi-examples-main/ai_application/nnm/example_nnm_rtsp/include/: application_init.h  example_shared_struct.h
kneopi-examples-main/ai_application/nnm/example_nnm_sensor/: CMakeLists.txt  application_init.cpp  inference_nnm.cpp  input_sensor.cpp  main.cpp
kneopi-examples-main/ai_application/nnm/example_nnm_sensor/fec/: fec_api.c  fec_api.h
kneopi-examples-main/ai_application/nnm/example_nnm_sensor/include/: application_init.h  example_shared_struct.h
kneopi-examples-main/ai_application/nnm/example_nnm_webcam/: CMakeLists.txt  application_init.cpp  display_liveview.cpp  input_webcam.cpp  main.cpp
kneopi-examples-main/ai_application/nnm/example_nnm_webcam/include/: example_shared_struct.h
kneopi-examples-main/ai_application/nnm/res/Resource/AE/: AutoExposure.cfg
kneopi-examples-main/ai_application/nnm/res/Resource/AWB/: AutoWhiteBalance.cfg  AutoWhiteBalance.ini
kneopi-examples-main/ai_application/nnm/res/Resource/AutoScene/: AutoScene.ini  autoscene_conf.cfg  autoscene_ref.json
kneopi-examples-main/ai_application/nnm/res/Resource/IFPE/0/: IFPE_DMA.cfg  IFPE_PQ.cfg  IFPE_PQ.ini
kneopi-examples-main/ai_application/nnm/res/Resource/ISP/0/: ISPE_GCLut.txt
kneopi-examples-main/ai_application/nnm/res/ini/: example_image.ini  example_rtsp.ini  example_sensor.ini  example_webcam.ini  fec_conf.ini
kneopi-examples-main/ai_application/plus_c/: build_all.sh
kneopi-examples-main/ai_application/plus_c/ex_common/: helper_functions.c  helper_functions.h  postprocess.c
kneopi-examples-main/ai_application/plus_c/kl730_demo_cam_generic_image_inference_drop_frame/: CMakeLists.txt  kl730_demo_cam_generic_image_inference_drop_frame.cpp
kneopi-examples-main/ai_application/plus_c/kl730_demo_generic_data_inference/: CMakeLists.txt  kl730_demo_generic_data_inference.c
kneopi-examples-main/ai_application/plus_c/kl730_demo_generic_image_inference/: CMakeLists.txt  kl730_demo_generic_image_inference.c
kneopi-examples-main/ai_application/plus_c/scan_devices/: CMakeLists.txt
kneopi-examples-main/ai_application/plus_python/: KL730DemoCamGenericImageInferenceDropFrame.py  KL730DemoGenericDataInference.py  KL730DemoGenericImageInference.py  KL730End2EndTutorialPidnet.py  KL730End2EndTutorialYoloV7.py  KL730HRNet.py
kneopi-examples-main/ai_application/plus_python/utils/: ExampleHelper.py  ExamplePostProcess.py
kneopi-examples-main/ai_application/plus_python/utils/postprocess/: bytetrack_postprocess.py  matching.py
kneopi-examples-main/hardware_control/h26xdec/: CMakeLists.txt  config.ini  h26xdec.c  vtcs_srb_ch1_1920x1080.h264  vtcs_srb_ch1_1920x1080.h265
kneopi-examples-main/hardware_control/jpegdec/: CMakeLists.txt  config.ini  jpegdec.c
kneopi-examples-main/hardware_control/jpegenc/: CMakeLists.txt  config.ini  jpegenc.c  sample_1920x1080.yuv
kneopi-examples-main/hardware_control/usb_camera/: CMakeLists.txt  usb_camera.c
kneopi-examples-main/hardware_control/venc1/: CMakeLists.txt  venc1.c
kneopi-examples-main/memory_control/edmc/: CMakeLists.txt  build.sh  edmc.c
kneopi-examples-main/memory_control/srb_receiver/: CMakeLists.txt  srb_receiver.cpp
kneopi-examples-main/memory_control/ssm_receiver/: CMakeLists.txt  build.sh  ssm_receiver.c
kneopi-examples-main/peripherals/C/gpio_led/: LICENSE  build.sh  toggle_line_value.c
kneopi-examples-main/peripherals/C/pwm_servo_control/: LICENSE  build.sh  servo_control.c
kneopi-examples-main/peripherals/C/spi_display/: CMakeLists.txt  LICENSE  build.sh
kneopi-examples-main/peripherals/C/spi_display/examples/: LCD_0in96_test.c  LCD_1in14_test.c  LCD_1in28_test.c  LCD_1in3_test.c  LCD_1in47_test.c  LCD_1in54_test.c  LCD_1in69_test.c  LCD_1in8_test.c  LCD_1in9_test.c  LCD_2in4_test.c  LCD_2in_test.c
kneopi-examples-main/peripherals/C/spi_display/lib/Config/: DEV_Config.c  DEV_Config.h
kneopi-examples-main/peripherals/C/spi_display/lib/GUI/: GUI_Paint.h
kneopi-examples-main/peripherals/C/spi_display/lib/LCD/: LCD_0in96.c  LCD_0in96.h  LCD_1in14.c  LCD_1in14.h  LCD_1in28.c  LCD_1in28.h  LCD_1in3.c  LCD_1in3.h  LCD_1in47.c  LCD_1in47.h  LCD_1in54.c  LCD_1in54.h  LCD_1in69.c  LCD_1in69.h  LCD_1in8.c  LCD_1in8.h  LCD_1in9.h  LCD_2inch.c  LCD_2inch.h  LCD_2inch4.c  LCD_2inch4.h
kneopi-examples-main/peripherals/Python/gpio_led/: LICENSE  toggle_line_value.py
kneopi-examples-main/peripherals/Python/pca9685/: LICENSE  pca9685.py
kneopi-examples-main/peripherals/Python/spidev/: spidev_loopback.py
(+4 files in other folders)
